<resources>
    <string name="app_name">McDakQrCode</string>
    <string name="action_settings">Settings</string>
    <string name="mc_donalds">McDonald\'s</string>

    <!-- instruction -->
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    
    <string name="scan_qr_code_and_get_voucher">Scan QR-code and get a voucher</string>
    <string name="activate_the_voucher">Activate the voucher\'s code before time runs out</string>
    <string name="get_discount_or_a_free_item">Get a DISCOUNT or a FREE ITEM</string>

    <!-- scan btn -->
    <string name="scan">SCAN</string>
    <string name="qr_code">QR CODE</string>

    <string name="voucher_expired">The voucher has expired</string>
    <string name="new_qr_code">NEW QR CODE</string>

    <string name="sale">25%</string>
    <string name="sale_little">-25%</string>
    <string name="your_discount">YOUR DISCOUNT</string>
    <string name="show_cashier">SHOW CASHIER THIS CODE</string>
    <string name="qr_code_number">MS5 - D62</string>

    <!-- font name -->
    <string name="mc_donalds_font_name">fonts/mcDonaldsFont.ttf</string>
</resources>
